<resources>

    <string name="app_name">Parsetagram</string>

    <!-- Login -->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>

    <!-- Camera -->
    <string name="caption">Caption</string>
    <string name="submit">Submit</string>

    <!-- Profile -->
    <string name="logout">Logout</string>

    <!-- Errors -->
    <string name="error_login">Login failed. Please try again.</string>
    <string name="error_registration">Registration failed. Please try again.</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_invalid_password">Invalid password.</string>

    <!-- Bottom Navigation -->
    <string name="bottom_nav_feed">Feed</string>
    <string name="bottom_nav_camera">Camera</string>
    <string name="bottom_nav_profile">Profile</string>

</resources>
